--- a/Python Basics/numpy.ipynb
+++ b/Python Basics/numpy.ipynb
@@ -1008,11 +1008,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15, 21, 57, 74],\n",
+       "       [ 9, 78, 59,  5]])"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.random.randint(0)"
+    "np.random.randint(0,100,8).reshape(2,4)"
    ]
   },
   {
