--- a/Python Basics/pandas.ipynb
+++ b/Python Basics/pandas.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "Row5       16       17       18       19"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "Row2        4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "Row5       17       18       19"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "       [17, 18, 19]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "(5, 3)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "Name: Column1, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "array([ 0,  4,  8, 12, 16])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "Row5       18       19"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,6 +632,224 @@
    "source": [
     "df[['Column3','Column4']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('mercedesbenz.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>X0</th>\n",
+       "      <th>X1</th>\n",
+       "      <th>X2</th>\n",
+       "      <th>X3</th>\n",
+       "      <th>X4</th>\n",
+       "      <th>X5</th>\n",
+       "      <th>X6</th>\n",
+       "      <th>X8</th>\n",
+       "      <th>X10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>X375</th>\n",
+       "      <th>X376</th>\n",
+       "      <th>X377</th>\n",
+       "      <th>X378</th>\n",
+       "      <th>X379</th>\n",
+       "      <th>X380</th>\n",
+       "      <th>X382</th>\n",
+       "      <th>X383</th>\n",
+       "      <th>X384</th>\n",
+       "      <th>X385</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>az</td>\n",
+       "      <td>v</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>d</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>w</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>t</td>\n",
+       "      <td>b</td>\n",
+       "      <td>ai</td>\n",
+       "      <td>a</td>\n",
+       "      <td>d</td>\n",
+       "      <td>b</td>\n",
+       "      <td>g</td>\n",
+       "      <td>y</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>az</td>\n",
+       "      <td>v</td>\n",
+       "      <td>as</td>\n",
+       "      <td>f</td>\n",
+       "      <td>d</td>\n",
+       "      <td>a</td>\n",
+       "      <td>j</td>\n",
+       "      <td>j</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>az</td>\n",
+       "      <td>l</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>d</td>\n",
+       "      <td>z</td>\n",
+       "      <td>l</td>\n",
+       "      <td>n</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>w</td>\n",
+       "      <td>s</td>\n",
+       "      <td>as</td>\n",
+       "      <td>c</td>\n",
+       "      <td>d</td>\n",
+       "      <td>y</td>\n",
+       "      <td>i</td>\n",
+       "      <td>m</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 377 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  X0 X1  X2 X3 X4 X5 X6 X8  X10  ...  X375  X376  X377  X378  X379  X380  \\\n",
+       "0   1  az  v   n  f  d  t  a  w    0  ...     0     0     0     1     0     0   \n",
+       "1   2   t  b  ai  a  d  b  g  y    0  ...     0     0     1     0     0     0   \n",
+       "2   3  az  v  as  f  d  a  j  j    0  ...     0     0     0     1     0     0   \n",
+       "3   4  az  l   n  f  d  z  l  n    0  ...     0     0     0     1     0     0   \n",
+       "4   5   w  s  as  c  d  y  i  m    0  ...     1     0     0     0     0     0   \n",
+       "\n",
+       "   X382  X383  X384  X385  \n",
+       "0     0     0     0     0  \n",
+       "1     0     0     0     0  \n",
+       "2     0     0     0     0  \n",
+       "3     0     0     0     0  \n",
+       "4     0     0     0     0  \n",
+       "\n",
+       "[5 rows x 377 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
