functions in python

--- a/Python Basics/functions.ipynb
+++ b/Python Basics/functions.ipynb
@@ -1,6 +1,395 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions in Python\n",
+    "\n",
+    "- Why Functions \n",
+    "- Function Definition\n",
+    "- Positional and Keyword Arguments in Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 24\n",
+    "\n",
+    "if num%2 == 0:\n",
+    "    print(\"The number is even\")\n",
+    "else:\n",
+    "    print(\"The number is odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## I want to use the above code many times, so I am defining a function\n",
+    "\n",
+    "def even_odd(num):\n",
+    "    if num%2==0:\n",
+    "        print(\"The number is even\")\n",
+    "    else: \n",
+    "        print(\"The number is odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_odd(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## print vs return\n",
+    "def hello_world():\n",
+    "    print(\"Hello Welcome\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello_world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = hello_world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## The value is none which indicates that the above function does not return anything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hello_world():\n",
+    "    return \"Hello Welcome\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val=hello_world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_number(num1, num2):\n",
+    "    return num1+num2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val = add_number(24,48)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## positional arguement\n",
+    "## keyword arguement\n",
+    "def hello(name, age=29):\n",
+    "    print(\"My name is {} and age is {}\".format(name,age))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Shristi and age is 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello('Shristi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Shristi and age is 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello('Shristi',20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## *args - positional arguement, **kwargs - keyword arguement\n",
+    "\n",
+    "def hello(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('shristi', 'Jalan')\n",
+      "{'age': 21, 'dob': 1999}\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello(\"shristi\",\"Jalan\",age = 21,dob=1999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=[\"Shristi\", \"Jalan\"]\n",
+    "dict_args={'age': 21, 'dob': 1999}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(['Shristi', 'Jalan'], {'age': 21, 'dob': 1999})\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello(lst,dict_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## lst by default is taking both the arguements as args so in order to fix this you need to specify the positional and keyword arguements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Shristi', 'Jalan')\n",
+      "{'age': 21, 'dob': 1999}\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello(*lst,**dict_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst=[1,2,3,4,5,6,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evenoddsum(lst):\n",
+    "    even_sum=0\n",
+    "    odd_sum=0\n",
+    "    for i in lst:\n",
+    "        if i%2==0:\n",
+    "            even_sum=even_sum+i\n",
+    "        else:\n",
+    "            odd_sum=odd_sum+i\n",
+    "    return even_sum,odd_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 16)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evenoddsum(lst)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
